--- a/publiccloud/provider.html
+++ b/publiccloud/provider.html
@@ -14,12 +14,14 @@
 <ul id="index"><li><a href="../index.html"><i>&lt;= Back to file list</i></a></li>
   <li><a href="#METHODS">METHODS</a>
     <ul>
+      <li><a href="#generate_basename">generate_basename</a></li>
       <li><a href="#conv_openqa_tf_name">conv_openqa_tf_name</a></li>
       <li><a href="#find_img">find_img</a></li>
-      <li><a href="#upload_image">upload_image</a></li>
+      <li><a href="#upload_img">upload_img</a></li>
       <li><a href="#img_proof">img_proof</a></li>
       <li><a href="#parse_img_proof_output">parse_img_proof_output</a></li>
       <li><a href="#create_ssh_key">create_ssh_key</a></li>
+      <li><a href="#place_ssh_config">place_ssh_config</a></li>
       <li><a href="#run_img_proof">run_img_proof</a></li>
       <li><a href="#get_image_id">get_image_id</a></li>
       <li><a href="#get_image_uri">get_image_uri</a></li>
@@ -31,7 +33,8 @@
       <li><a href="#terraform_apply">terraform_apply</a></li>
       <li><a href="#terraform_destroy">terraform_destroy</a></li>
       <li><a href="#terraform_param_tags">terraform_param_tags</a></li>
-      <li><a href="#cleanup">cleanup</a></li>
+      <li><a href="#get_terraform_output">get_terraform_output</a></li>
+      <li><a href="#teardown">teardown</a></li>
       <li><a href="#stop_instance">stop_instance</a></li>
       <li><a href="#start_instance">start_instance</a></li>
       <li><a href="#get_state_from_instance">get_state_from_instance</a></li>
@@ -41,6 +44,14 @@
 
 <h1 id="METHODS">METHODS</h1>
 
+<h2 id="generate_basename">generate_basename</h2>
+
+<pre><code>Call: $self-&gt;generate_basename();
+
+openqa test product name composition, based on basic product parameters values and eventual modifiers.
+
+Returns a string-name containing distri, version, flavor, arch.</code></pre>
+
 <h2 id="conv_openqa_tf_name">conv_openqa_tf_name</h2>
 
 <p>Does the conversion between <code>PUBLIC_CLOUD_PROVIDER</code> and Terraform providers name.</p>
@@ -49,7 +60,7 @@
 
 <p>Retrieves the image-id by given image <code>name</code>.</p>
 
-<h2 id="upload_image">upload_image</h2>
+<h2 id="upload_img">upload_img</h2>
 
 <p>Upload a image to the CSP. Required parameter is the location of the <code>image</code> file. UEFI images are supported by giving the optional parameter <code>type</code> = &#39;uefi&#39;. This is only supported on GCE at the momment.</p>
 
@@ -68,6 +79,10 @@
 <h2 id="create_ssh_key">create_ssh_key</h2>
 
 <p>Creates an ssh keypair in a given file path by $args{ssh_private_key_file}</p>
+
+<h2 id="place_ssh_config">place_ssh_config</h2>
+
+<p>Creates ~/.ssh/config file with all the common ssh client settings</p>
 
 <h2 id="run_img_proof">run_img_proof</h2>
 
@@ -93,7 +108,7 @@
 
 <p>Creates multiple instances on the public cloud provider. Retrieves an array of publiccloud::instance objects.</p>
 
-<p><code>image</code> defines the image_id to create the instance. <code>instance_type</code> defines the flavor of the instance. If not specified, it will load it from PUBLIC_CLOUD_INSTANCE_TYPE.</p>
+<p><code>image</code> defines the image_id to create the instance. <code>instance_type</code> defines the flavor of the instance. If not specified, it will load it from PUBLIC_CLOUD_INSTANCE_TYPE. <code>timeout</code> Parameter to pass to instance::wait_for_ssh. <code>proceed_on_failure</code> Same as timeout.</p>
 
 <h2 id="on_terraform_apply_timeout">on_terraform_apply_timeout</h2>
 
@@ -119,9 +134,13 @@
 
 <p>Build the tags parameter for terraform. It is a single depth json like c&lt;{&quot;key&quot;: &quot;value&quot;}&gt; where c&lt;value&gt; must be a string.</p>
 
-<h2 id="cleanup">cleanup</h2>
+<h2 id="get_terraform_output">get_terraform_output</h2>
 
-<p>This method is called called after each test on failure or success.</p>
+<p>Query the terraform data structure in json format. Input: &lt;jq-query-format&gt; string; &lt;empty&gt; = no query then full output of data structure. E.g: to get the VM instance name from json data structure, the call is: get_terraform_output(&quot;.vm_name.value[0]&quot;); To get the complete output structure, the call is: get_terraform_output();</p>
+
+<h2 id="teardown">teardown</h2>
+
+<p>This method is calling the terraform_destroy() subroutine.</p>
 
 <h2 id="stop_instance">stop_instance</h2>
 
